--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
 		<maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
 		<slf4j-log4j12.version>1.7.30</slf4j-log4j12.version>
 		<jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+		<!--<spring-security-oauth2-autoconfigure.version>2.3.0.RELEASE</spring-security-oauth2-autoconfigure.version>-->
+
 	</properties>
 
 	<dependencies>
@@ -47,6 +49,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
+		<!--<dependency>
+			<groupId>org.springframework.security.oauth.boot</groupId>
+			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
+			<version>${spring-security-oauth2-autoconfigure.version}</version>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
